@@ -12,6 +12,7 @@ public:
   virtual void Close();
   virtual int Read(BYTE* buf, int buf_size);
   virtual __int64 Seek(__int64 offset, int whence);
+  virtual bool IsEOF();
 
 protected:
   CFile* m_pFile;
