@@ -15,6 +15,18 @@ CDVDInputStreamHttp::~CDVDInputStreamHttp()
   Close();
 }
 
+bool CDVDInputStreamHttp::IsEOF()
+{
+  if(m_pFile)
+  {
+    __int64 size = m_pFile->GetLength();
+    if( size > 0 && m_pFile->GetPosition() >= size )
+      return true;
+  }
+
+  return false;
+}
+
 bool CDVDInputStreamHttp::Open(const char* strFile)
 {
   if (!CDVDInputStream::Open(strFile)) return false;
@@ -35,7 +47,6 @@ bool CDVDInputStreamHttp::Open(const char* strFile)
     m_pFile = NULL;
     return false;
   }
-  m_bEOF = false;
 
   return true;
 }
@@ -52,19 +63,13 @@ void CDVDInputStreamHttp::Close()
   
   CDVDInputStream::Close();
   m_pFile = NULL;
-  m_bEOF = true;
 }
 
 int CDVDInputStreamHttp::Read(BYTE* buf, int buf_size)
 {
-  int ret = 0;
+  unsigned int ret = 0;
   if (m_pFile) ret = m_pFile->Read(buf, buf_size);
   else return -1;
-
-  if( ret <= 0 ) {
-    if( m_pFile->GetPosition() >= m_pFile->GetLength() ) 
-      m_bEOF = true;
-  }
 
   return (int)(ret & 0xFFFFFFFF);
 }
@@ -73,7 +78,6 @@ __int64 CDVDInputStreamHttp::Seek(__int64 offset, int whence)
 {
   __int64 ret = 0;
   if (m_pFile) ret = m_pFile->Seek(offset, whence);
-
   else return -1;
 
   return ret;
